# wled-adapter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  build_test_and_tag.yml  build_test_tag_deploy.yml  deploy_to_pypi.yml
examples/: README.md  serial_example.py
tests/: data_test_cases.py  test_segment.py  test_serialisation.py
wled_adapter/: adapter.py  connection.py  segment.py  state.py
