[tool.poetry]
license = { text = "MIT" }
name = "wled-adapter"
description = "A package to interact with WLED devices"
authors = ["Alessio Morale <alessiomorale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-json = "^0.6.6"
pyserial = "^3.5"
loguru = "^0.7.2"
colour = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
